--- a/tests/TestGraph/description
+++ b/tests/TestGraph/description
@@ -1,1 +1,1 @@
-Ce test permet de vérifier que l'application sans option fonctionne correctement
+Ce test permet de vérifier que la création du graph marche bien. Attention il faut que le fichier créé et le fichier attendu aient le même nom.
