--- a/tests/TestExcludeImage/description
+++ b/tests/TestExcludeImage/description
@@ -1,1 +1,2 @@
-Ce test permet de vérifier que l'application sans option fonctionne correctement
+
+Ce test permet de vérifier que l'application avec l'option d'exclusion des type : png jpg jpeg css et java, fonctionnent correctement
